# Autoquads

./: .gitignore  CMakeLists.txt  README.md  package-lock.json
apps/: CMakeLists.txt
apps/autoquads-electron/: main.js
apps/autoquads-electron/redux/: actions.js  reducer.js
apps/basic_app/: CMakeLists.txt
apps/console_app/: CMakeLists.txt
libs/optimization_lib/: CMakeLists.txt
libs/optimization_lib/include/: utils.h
libs/optimization_lib/include/core/: core.h
libs/optimization_lib/include/data_providers/: mesh_wrapper.h
libs/optimization_lib/include/objective_functions/: AllVertexPositions.h  BendingEdge.h  MembraneConstraints.h  ObjectiveFunction.h  PenaltyPositionalConstraints.h  STVK.h  SymmetricDirichlet.h  TotalObjective.h  seamless_objective.h
libs/optimization_lib/include/objective_functions/edge_pair/: edge_pair_integer_translation_objective.h
libs/optimization_lib/include/objective_functions/singularity/: singular_point_position_objective.h
libs/optimization_lib/include/solvers/: EigenSparseSolver.h  NewtonSolver.h
libs/optimization_lib/src/data_providers/: mesh_wrapper.cpp
libs/optimization_lib/src/objective_functions/: AllVertexPositions.cpp  BendingEdge.cpp  MembraneConstraints.cpp  ObjectiveFunction.cpp  PenaltyPositionalConstraints.cpp  STVK.cpp  SymmetricDirichlet.cpp  TotalObjective.cpp
libs/optimization_lib/src/solvers/: EigenSparseSolver.cpp  solver.cpp
node_addon/: CMakeLists.txt
node_addon/src/: engine.cpp
plugins/: CMakeLists.txt
plugins/basic_app/include/: app_utils.h
plugins/basic_app/src/: basic_app.cpp
plugins/deformation_plugin/include/: app_utils.h  deformation_plugin.h
plugins/deformation_plugin/src/: deformation_plugin.cpp
tests/optimization_lib_tests/: CMakeLists.txt
(+4 files in other folders)
